# bges

./: .clang-tidy  CMakeLists.txt  LICENSE.md  fa  uml.mdj
backends/sfml/: source.c  source.cpp
cmake/: configure.cmake
common/common/: exchanged_types.h  export_symbol.h
includes/bges/: bges.hpp  colors.hpp  events.hpp  geometry.hpp  label.hpp  scene.hpp  shapes.hpp  viewport.hpp  window.hpp
includes/bges/base_classes/: event_publishers.hpp  parent.hpp  renderable.hpp  skin.hpp  skinable.hpp
includes/bges/containers/: anchorpane.hpp  borderpane.hpp  flowpane.hpp  gridpane.hpp  hbox.hpp  stackpane.hpp  tilepane.hpp  unmanaged.hpp  vbox.hpp
includes/bges/details/: export.hpp
includes/bges/end_nodes/: button.hpp  checkbox.hpp  colorpicker.hpp  image.hpp  label.hpp  passwordfield.hpp  progressbar.hpp  radiobuttons.hpp  slider.hpp  textfield.hpp  togglebutton.hpp
sources/: backend_context.cpp  backend_context.hpp  bges.cpp  colors.cpp  label.cpp  scene.cpp  shapes.cpp  source.cpp  utils.cpp  utils.hpp  viewport.cpp  window.cpp
sources/containers/: hbox.cpp  unmanaged.cpp  vbox.cpp
sources/end_nodes/: button.cpp  label.cpp  slider.cpp
sources/parent_classes/: parent.cpp  renderable.cpp
tests/: qdt.cpp
